src/test/ui/feature-gate-box-pat.stderr
error: box pattern syntax is experimental (see issue #29641)
  --> $DIR/feature-gate-box-pat.rs:14:9
   |
14 |     let box x = Box::new('c'); //~ ERROR box pattern syntax is experimental
   |         ^^^^^
   |
   = help: add #![feature(box_patterns)] to the crate attributes to enable

error: aborting due to previous error

